# iterchain

./: README.md  hatch.toml  pyproject.toml
.github/workflows/: build.yml  lints.yml
docs/: conf.py
iterchain/: __init__.py  core.py
tests/: test_simple.py
